# lucy

./: .env.example  .gitignore  BENCHMARKING-REPORT.md  CONVEX_PLATFORM_API_RESEARCH.md  FOR_VIKTOR.md  INTEGRATION-RESEARCH.md  OPENHANDS_PLAN.md  README.md  SYSTEM_CORE.md  TEST-MATRIX.md  alembic.ini  check_slack.py  comprehensive_tests.py  debug_issue.py  docker-compose.yml  memory_audit_report.md  mock_mcps.py  proactiveness_report.md  pyproject.toml  round2_tests.py  round3_tests.py  run_tests.py  send_live_test.py  slack-manifest.json  stress_test.out  stress_test_mcps.py  stress_test_results.json  stress_tests.py  test_10_mcps.py  test_advanced_cron_features.py  test_agent.py  test_as_user.py  test_composio_slack.py  test_cron_delivery.py  test_cron_features.py  test_cron_stress_v2.py  test_deai_engine.py  test_e2e_heartbeat.py  test_live_slack.py  test_phase1_results.json  (+40 more)
.cursor/plans/: agentmail_email_integration_32c13e2e.plan.md  apply_viktor_ux_improvements_86e7e696.plan.md  lucy_spaces_feature_63455f9b.plan.md  mcp_client_integration_36878fcf.plan.md  true_reflection_pattern_40a835a5.plan.md
.cursor/rules/: deployment.mdc  global.mdc  openclaw.mdc  slack.mdc  state.mdc  testing.mdc
Documentation/: GAP-ANALYSIS.md  RESTRUCTURING-PLAN.md  database-schema.md  database-setup-summary.md  integrations-summary.md  lucy-docs.md  memory-implementation-summary.md  model-routing-summary.md  openclaw-integration-summary.md  openclaw-test-report.md  production-hardening-roadmap.md  reliability-scale-audit.md  slack-implementation-summary.md  slack-ux-summary.md  step2-completion-summary.md  test-matrix.md  test-report-deep.md
[workspace]/src/: App.tsx
assets/: SOUL.md  SYSTEM_CORE.md  SYSTEM_PROMPT.md
assets/prompt_modules/: coding.md  integrations.md  memory.md  proactive.md  tool_use.md
assets/sub_agents/: document.md  integrations.md  research.md
deploy/: LAST_DEPLOY.txt  lucy.service  post-receive  setup-vps.sh
docs/: AGENT_LOOP.md  ARCHITECTURE.md  ARCHIVED_CODE.md  BEHAVIOR_GUIDE.md  CRONS_HEARTBEAT.md  CRON_SYSTEM.md  DATABASE.md  DEPLOYMENT.md  DREAM.md  FOR_VIKTOR.md  INFRASTRUCTURE.md  MESSAGE_PIPELINE.md  OPENCLAW_BOUNDARY.md  PROACTIVENESS_ENGINE.md  PROMPTS_REFERENCE.md  QUICK_REFERENCE.md  RESTRUCTURING-PLAN.md  SKILLS_SEEDS.md  SLACK_LAYER.md  TOOLS_INTEGRATIONS.md  TOOL_AUDIT.md  VIKTOR_REVIEW_UX_AUDIT.md  WORKSPACE_MEMORY.md  lucy-dream-doc.docx
docs/how-lucy-works/: DEPLOYMENT.md  README.md  TEST-FIX-RETRY-FRAMEWORK.md
docs/lucy-deam-docs/: LUCY RESPONSE PHILOSOPHY.md  lucy-dream-doc.md
docs/openclaw/: README.md  agent-workspace.md  background-process.md  cron-jobs.md  cron-vs-heartbeat.md  exec-tool.md  hooks.md  (+7 more)
migrations/: __init__.py  env.py  script.py.mako
prompts/: CAPABILITIES.md  SOUL.md  SOUL_COMPACT.md  SOUL_LITE.md  SYSTEM_CORE.md  SYSTEM_CORE_COMPACT.md  SYSTEM_PROMPT.md
reference/viktor/: deploy_calc.py  find_channel.py  pyproject.toml
reference/viktor/Viktor Docs/: chat summary.md  openclaw_integration_system.md  openclaw_memory_system.md  openclaw_soul_slack.md  viktor_deep_dive_forbes.md
reference/viktor/crons/heartbeat/: LEARNINGS.md  task.json
reference/viktor/crons/mentions-issue-monitor/: LEARNINGS.md  state.json
reference/viktor/crons/mentions-issue-monitor/scripts/: check_new_messages.py
reference/viktor/crons/workflow_discovery/: task.json
reference/viktor/data/polar_snapshots/: 2026-02-15.json  2026-02-16.json  2026-02-22.json
reference/viktor/scripts/polar/: daily_revenue_report.py
reference/viktor/shared/: __init__.py
reference/viktor/skills/codebase-engineering/: SKILL.md
reference/viktor/skills/docx-editing/: SKILL.md
reference/viktor/skills/docx_editing/: SKILL.md
reference/viktor/skills/excel_editing/: SKILL.md
reference/viktor/skills/general-tools/: SKILL.md
reference/viktor/skills/general_tools/: SKILL.md
reference/viktor/skills/integrations/: SKILL.md
reference/viktor/skills/integrations/gdrive/: SKILL.md
reference/viktor/skills/integrations/google_calendar/: SKILL.md
reference/viktor/skills/integrations/linear/: SKILL.md
reference/viktor/skills/integrations/polar-api/: SKILL.md
reference/viktor/skills/integrations/references/: custom-api-integration.md
reference/viktor/skills/pdf-creation/: SKILL.md
reference/viktor/skills/pdf-creation/scripts/: extract_site_styles.py
reference/viktor/skills/pdf-form-filling/: SKILL.md
reference/viktor/skills/pdf_creation/: SKILL.md
reference/viktor/skills/pdf_creation/scripts/: extract_site_styles.py
reference/viktor/skills/pdf_form_filling/: SKILL.md
reference/viktor/skills/remotion-video/: SKILL.md
reference/viktor/skills/remotion_video/: SKILL.md
reference/viktor/skills/scheduled_crons/: SKILL.md
reference/viktor/skills/skill_creation/references/: integration-exploration.md
reference/viktor/skills/slack-admin/: SKILL.md
reference/viktor/skills/slack_admin/: SKILL.md
reference/viktor/skills/thread-orchestration/: SKILL.md
reference/viktor/skills/viktor_account/: SKILL.md
reference/viktor/skills/workflow-discovery/: SKILL.md
reference/viktor/skills/workflow_discovery/: SKILL.md
reference/viktor/temp/: viktor_architecture_complete.docx
reference/viktor/viktor-spaces/calculator/src/: App.tsx
scripts/: add_thread_table.py  debug_socket.py  deploy-openclaw-simple.sh  deploy-openclaw.sh  enable_openclaw_coding.sh  init_db.py  live_test.py  monitor_viktor.py  run.py  stress_test.py  test_harness.py  test_openclaw.py  test_slack_connection.py  worker.py
tests/: __init__.py  conftest.py  test_action_safety.py  test_agent_reliability.py  test_circuit_breaker.py  test_code_validator.py  test_dry_run_simulation.py  test_metrics.py  test_quality_fixes.py  test_r5.py  test_retrieval.py  test_round4.py  test_safety.py  test_slo.py  test_test_fix_retry.py  test_thread_classification.py
viktor_review/: stress_test_output.txt
viktor_workspace_export/: deploy_calc_prod.py  init_calc.py
workspace_seeds/: HEARTBEAT.md  README.md
(+285 files in other folders)
