[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucy"
version = "0.2.0"
description = "AI coworker for Slack — proactive, skill-driven, built on OpenClaw"
requires-python = ">=3.12"
dependencies = [
    # Slack
    "slack-bolt>=1.21,<2",

    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",

    # Config
    "pydantic-settings>=2.7,<3",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",

    # HTTP + resilience
    "httpx>=0.28,<1",
    "tenacity>=9.0,<10",

    # Logging
    "structlog>=24.4,<25",

    # Integrations (Composio meta-tools)
    "composio>=0.11,<1",

    # Workspace filesystem
    "aiofiles>=24.1,<25",
    "pyyaml>=6.0,<7",

    # Scheduling (crons / proactivity)
    "apscheduler>=3.10,<4",
    "croniter>=6.0,<7",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
