[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucy"
version = "0.3.0"
description = "AI coworker for Slack — proactive, skill-driven, built on OpenClaw"
requires-python = ">=3.12"
dependencies = [
    # Slack
    "slack-bolt>=1.21,<2",

    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",

    # Config
    "pydantic-settings>=2.7,<3",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",

    # HTTP + resilience
    "httpx>=0.28,<1",
    "tenacity>=9.0,<10",

    # Logging
    "structlog>=24.4,<25",

    # Integrations (Composio meta-tools)
    "composio>=0.11,<1",

    # MCP protocol client (HTTP/SSE transport)
    "mcp>=1.8,<2",

    # Email (native agent identity)
    "agentmail>=0.2,<1",

    # Workspace filesystem
    "aiofiles>=24.1,<25",
    "pyyaml>=6.0,<7",

    # Scheduling (crons / proactivity)
    "apscheduler>=3.10,<4",
    "croniter>=6.0,<7",
    "python-dateutil>=2.9,<3",

    # SSL
    "certifi",

    # Process management (scripts/run.py single-instance locking)
    "psutil>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
# Suppressed rules:
# E501  - line too long: long regex/string literals annotated with # noqa: E501
# N806  - uppercase constants inside functions: intentional convention for local consts
# N814  - camelcase imported as constant: aliased for brevity in hot code paths
# TC001/TC002/TC003 - TYPE_CHECKING imports: deferred for runtime compatibility
# UP042 - StrEnum: requires Python 3.11+, keeping str+Enum for 3.10 compat
# B023  - loop variable capture: reviewed, non-closures (list comprehensions)
# B904  - raise from: pre-existing across the codebase, tracked separately
# SIM105 - contextlib.suppress: explicit try/except preferred for logging/clarity
# SIM102 - nested if: intentional for readability
# SIM103/SIM108 - early return/ternary: reduces readability for complex conditions
# SIM110 - generator expression: pre-existing style preference
# SIM115 - context manager for file open: pre-existing, low risk
extend-ignore = [
    "E501", "N806", "N814", "TC001", "TC002", "TC003",
    "UP042", "B023", "B904", "SIM105", "SIM102", "SIM103",
    "SIM108", "SIM110", "SIM115",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
