[project]
name = "workspace"
version = "0.1.0"
description = "AI Coworker workspace"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "httpx",
    "requests",
    "tenacity",
    "beautifulsoup4",
    "lxml",
    "python-docx",
    "openpyxl",
    "PyMuPDF",
    "pdfplumber",
    "python-pptx",
    "weasyprint",
    "markdown",
    "jinja2",
    "pillow",
    "pydub",
    "qrcode",
    "matplotlib",
    "plotly",
    "fire",
    "rich",
    "typer",
    "regex",
    "chardet",
    "python-dateutil",
    "unidiff",
    "pydantic",
    "playwright",
    "scipy",
    "sympy",
    "fastapi",
    "shortuuid",
    "cachetools",
]
